tests/errors/semantics/recursive_run_compile_time_struct_field.odl
main :: () -> void {
    mytype :: () -> foo_t {
        return .{};
    };

    foo_t :: struct {
        foo := @run mytype();
    };
};
